<resources>
    <string name="app_name">Bancheese</string>
    <string name="app_version">0.2.1</string>
    <string name="app_version_string">v0.2.1</string>
    <string name="app_latest_version">0.2.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="pref_string">SharedPref</string>

    <string name="transaksi_valid">transaksi_valid</string>
    <string name="transaksi_void">transaksi_void</string>
    <string name="transaksi_saved">transaksi_saved</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="isLogin">isLogin</string>
    <string name="username">yoga@gmail.com</string>
    <string name="key_email">key_email</string>
    <string name="key_nama">key_nama</string>
    <string name="key_password">key_password</string>
    <string name="title_activity_daftar_transaksi">Daftar Transaksi</string>
    <string name="tab_text_final">Selesai</string>
    <string name="tab_text_tunda">Ditunda</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_main_bottom">MainBottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="transaction_success">Traksaksi Berhasil</string>
    <string name="text_back">Kembali</string>
    <string name="text_print">Print</string>
    <!--<string name="web_api_url">http://192.168.1.4:8081/api/v1/</string>-->
    <string name="web_api_url">http://api.bancheese.com/api/v1/</string>
    <string name="key_username_login">key_username</string>
    <string name="key_role_login">role_login</string>
    <string name="key_nama_login">key_nama_login</string>
    <string name="key_cabang_login">key_cabang_login</string>
    <string name="key_id_login">key_id_login</string>
    <string name="text_uang_kembali">Uang Kembali</string>
    <string name="password_tidak_cocok">Password baru tidak cocok</string>
    <string name="min_password">Password tidak boleh kurang dari 6 karakter</string>
    <string name="printer_not_connected">Tidak Terhubung</string>
    <string name="find_printer_text">Printer belum terhubung dengan perangkat anda. Tekan tombol cari printer di bawah
        untuk menghubungkan printer dengan koneksi bluetooth.
    </string>
    <string name="find_printer">Pilih Printer</string>
    <string name="nama_printer">nama_printer</string>
    <string name="id_printer">id_printer</string>
    <string name="nama_cabang_login">nama_cabang</string>
    <string name="alamat_cabang_login">alamat_cabang</string>
    <string name="text_not_found">Tidak ada data yang ditampilkan</string>
    <string name="text_user_not_found">Username atau password tidak ditemukan</string>
    <string name="register_device">Perangkat ini belum terhubung dengan outlet manapun. Registrasikan perangkat ini
        dengan menekan tombol pilih outlet dibawah.
    </string>
    <string name="text_nama_perangkat">Nama Perangkat</string>
    <string name="text_nama_outlet">Nama Outlet</string>
    <string name="text_alamat_outlet">Alamat</string>
    <string name="tab_text_void">void</string>

</resources>
