<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrasiDevice" android:id="@+id/constraintLayout7">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/app_bar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/app_bar"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:gravity="center_horizontal|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/layout_select_outlet" android:visibility="gone">
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp" app:srcCompat="@drawable/qr_code" android:id="@+id/imageView10"/>
        <TextView
                android:text="@string/register_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:gravity="center_horizontal|center_vertical" android:padding="16dp"
                android:textColor="@color/colorBlack"/>
        <Button
                android:text="Pilih Outlet"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:id="@+id/btn_device_pilih"
                android:background="@drawable/rounded_gradient_primary"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/layout_device_outlet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:visibility="gone">

        <TextView
                android:text="@string/text_nama_perangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView31"
                android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_nama_device"
                app:layout_constraintTop_toBottomOf="@+id/textView31" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                android:textColor="@color/colorBlackDark" android:textSize="18sp"/>
        <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/text_nama_device"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@drawable/store" android:id="@+id/imageView12"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/divider12" android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/text_nama_outlet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView33"
                app:layout_constraintTop_toTopOf="@+id/imageView12"
                app:layout_constraintStart_toEndOf="@+id/imageView12" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/text_alamat_outlet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView35"
                app:layout_constraintTop_toBottomOf="@+id/textView33"
                app:layout_constraintStart_toStartOf="@+id/textView33" android:layout_marginTop="8dp"
        />
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_nama_outlet"
                app:layout_constraintStart_toEndOf="@+id/textView33" android:layout_marginStart="8dp"
                android:textColor="@color/colorBlack" app:layout_constraintTop_toTopOf="@+id/textView33"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_alamat_outlet"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_nama_outlet"
                app:layout_constraintStart_toStartOf="@+id/text_nama_outlet" android:textColor="@color/colorBlack"/>
        <Button
                android:text="Hapus Akses"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btn_hapus_akses"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/colorBlack" android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_ubah_outlet"/>
        <Button
                android:text="Ubah Outlet"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btn_ubah_outlet"
                app:layout_constraintStart_toEndOf="@+id/btn_hapus_akses"
                app:layout_constraintTop_toTopOf="@+id/btn_hapus_akses" android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>