<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PilihPrinterActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/app_bar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical" android:gravity="center_horizontal|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:visibility="gone" android:id="@+id/layout_no_printer">
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp" app:srcCompat="@drawable/print" android:id="@+id/imageView7"/>
        <TextView
                android:text="@string/printer_not_connected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView27"
                android:gravity="center_horizontal|center_vertical" android:layout_marginTop="16dp"
                android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorBlack"/>
        <TextView
                android:text="@string/find_printer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView28"
                android:gravity="center_horizontal|center_vertical" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
        <Button
                android:text="@string/find_printer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_pilih_printer"
                android:layout_marginTop="16dp" android:background="@drawable/rounded_primary"
                android:paddingStart="16dp" android:paddingEnd="16dp"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/layout_printer"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/print" android:id="@+id/imageView6"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/textView29"
                app:layout_constraintStart_toStartOf="@+id/btn_test_print" app:layout_constraintEnd_toEndOf="@+id/btn_test_print"/>
        <Button
                android:text="Test"
                android:layout_width="100dp"
                android:layout_height="wrap_content" android:id="@+id/btn_test_print"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"
                android:background="@drawable/rounded_primary"/>
        <View
                android:id="@+id/divider14"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toTopOf="@+id/textView29"
                app:layout_constraintBottom_toBottomOf="@+id/text_id_printer"
                app:layout_constraintStart_toEndOf="@+id/btn_test_print" android:layout_marginStart="16dp"/>
        <TextView
                android:text="Nama Printer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView29" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/divider14"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_nama_printer"
                app:layout_constraintTop_toBottomOf="@+id/textView29"
                app:layout_constraintStart_toStartOf="@+id/textView29"
                android:layout_marginTop="8dp" android:textColor="@color/colorBlack"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_id_printer"
                app:layout_constraintTop_toBottomOf="@+id/textView34"
                app:layout_constraintStart_toStartOf="@+id/text_nama_printer"
                android:layout_marginTop="8dp" android:textColor="@color/colorBlack"/>
        <TextView
                android:text="Id Printer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView34" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/text_nama_printer"
                app:layout_constraintTop_toBottomOf="@+id/text_nama_printer"/>
        <Button
                android:text="Ubah Printer"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btn_ubah_printer"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>