<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LoginActivity" android:padding="0dp">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/linearLayout2"
                    android:background="@drawable/gradient_primary" android:paddingTop="32dp"
                    android:paddingBottom="24dp"
                    android:elevation="2dp"
            >
                <ImageView
                        android:layout_width="150dp"
                        android:layout_height="125dp" app:srcCompat="@drawable/logo"
                        android:id="@+id/imageView4" android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="36dp"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" app:srcCompat="@drawable/chocolate"
                    android:id="@+id/imageView8" android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    android:elevation="3dp"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="24dp">


                <TextView
                        android:text="LOGIN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView16"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:gravity="center" android:textSize="18sp" android:textColor="@color/colorBlack"
                        android:textStyle="bold"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/text_login_alert"
                        android:background="@drawable/bg_warning" android:textColor="@color/colorBlack"
                        android:padding="8dp" android:gravity="center|center_horizontal"
                        android:layout_marginTop="16dp" android:visibility="gone"/>
                <TextView
                        android:text="@string/prompt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView21"
                        android:layout_marginTop="24dp"/>
                <EditText
                        android:id="@+id/text_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" android:background="@color/colorGrey_300"
                        android:paddingStart="16dp" android:layout_marginTop="8dp">

                </EditText>


                <TextView
                        android:text="@string/prompt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView22"
                        android:layout_marginTop="16dp"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:id="@+id/text_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" android:paddingStart="16dp"
                        android:background="@color/colorGrey_300">

                </EditText>

                <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/action_sign_in_short"
                        android:textStyle="bold" android:background="@color/colorPrimaryDark"
                        android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>